# simulation

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
src/simulation/: __init__.py  spice.py
src/simulation.egg-info/: PKG-INFO  SOURCES.txt
src/simulation/test/: test.py
