[metadata]
name = simulation
version = 0.1.dev1
author = Paul Amari
author_email = amari.paul@protonmail.com
description = Generate Netlist for spice simulation.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = 
    electrical simulation
    spice
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
python_requires = >= 3.8.5
package_dir=
    = src
packages = find:

[options.packages.find]
where = src